[package]
name = "cryptopals"
version = "0.1.0"
authors = ["Tanel Liiv <tanel.liiv@defendec.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[[bin]]
#name = "base64_encode"
#path = "src/base64_encode/main.rs"

[dependencies]
aes = "0.3.2"
block-modes = "0.3.3"
