[package]
name = "cryptopals"
version = "0.1.0"
authors = ["Tanel Liiv <tanel.liiv@defendec.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[[bin]]
#name = "base64_encode"
#path = "src/base64_encode/main.rs"

[dependencies]
aes = "0.3.2"
rand = "0.7.2"
# SHA1
byteorder = "1.3.4"

# Following all MD4
[dependencies.block-buffer]
version = "0.9"

[dependencies.digest]
version = "0.9"

[dependencies.opaque-debug]
version = "0.3"
[dev-dependencies.digest]
features = ["dev"]
version = "0.9"

[dev-dependencies.hex-literal]
version = "0.2"

[features]
default = ["std"]
std = ["digest/std"]
